[package]
name = "ecs_bench_suite"
version = "0.2.0"
authors = [
    "Thomas Gillen <thomas.gillen@googlemail.com>",
    "Tudor Lechintan <lechintantudor02@gmail.com>",
]
edition = "2018"

[dependencies]
bevy_ecs = "0.5"
bevy_tasks = "0.5"
bincode = "1.3"
cgmath = { version = "0.18", features = ["serde"] }
hecs = { version = "0.6", features = ["column-serialize", "row-serialize"] }
legion = "0.4"
planck_ecs = { version = "1.2", features = ["parallel"] }
rayon = "1.5"
ron = "0.6"
serde = { version = "1.0", features = ["derive"] }
shipyard = "0.5.0"
specs = { version = "0.17", features = ["serde"] }
specs-derive = "0.4"

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmarks"
harness = false
